objects/Contact_to_case_group_junction__c.object
<CustomObject>
    <fields>
        <fullName>COS_Case_Group__c</fullName>
        <label>COS Case Group</label>
        <referenceTo>COS_Case_Group__c</referenceTo>
        <relationshipName>Contacts_to_case_groups_junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_To_Project_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Contact__r.Parent_Account__r.Name</formula>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Contact_To_Project_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Case Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Account__c</columns>
        <columns>COS_Case_Group__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CJ-{000000}</displayFormat>
        <label>Contact Group Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Case Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Account_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, 
$User.LastName &lt;&gt; &apos;Migration&apos;, 
$User.LastName &lt;&gt; &apos;Integration&apos;, 
$User.Is_Data_Steward__c &lt;&gt; TRUE, 
Contact__r.Parent_Account__c &lt;&gt; COS_Case_Group__r.Account__r.Id)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact account must match with Case Group Account</errorMessage>
    </validationRules>
</CustomObject>